--- a/index.html
+++ b/index.html
@@ -197,22 +197,22 @@
             <h2 class="section-title">Work</h2>
             <div class="work__container bd-grid">
                 <div class="work__img">
-                    <a href="https://github.com/TuhinBar/Tic_Tac_Toe"><img src="assets/img/work1.png" alt=""></a>
+                    <a href="https://github.com/TuhinBar/Tic_Tac_Toe"><img src="Assets/img/work1.png" alt=""></a>
                 </div>
                 <div class="work__img">
-                    <a href="https://github.com/TuhinBar/Finding_Solutions"><img src="assets/img/work2.png" alt=""></a>
+                    <a href="https://github.com/TuhinBar/Finding_Solutions"><img src="Assets/img/work2.png" alt=""></a>
                 </div>
                 <div class="work__img">
-                    <img src="assets/img/work3.jpg" alt="">
+                    <img src="Assets/img/work3.jpg" alt="">
                 </div>
                 <div class="work__img">
-                    <img src="assets/img/work4.jpg" alt="">
+                    <img src="Assets/img/work4.jpg" alt="">
                 </div>
                 <div class="work__img">
-                    <img src="assets/img/work5.jpg" alt="">
+                    <img src="Assets/img/work5.jpg" alt="">
                 </div>
                 <div class="work__img">
-                    <img src="assets/img/work6.jpg" alt="">
+                    <img src="Assets/img/work6.jpg" alt="">
                 </div>
             </div>
         </section>
