--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="skill__container bd-grid">
                 <div>
                     <h2 class="skills__subtitle">Professional Skills</h2>
-                    <p class="skills__text">I have had the opportunity to follow a developer's path. I started with <b>C</b>. I have more than a year of experience in web development. Also, I have done some content marketing internships. I am profecient in <b>English</b>, <b>Hindi</b>, <b>Bengali</b>. All my technical skills are mentioned below 👇</p>
+                    <p class="skills__text">I have had the opportunity to follow a developer's path. I started with <b>C</b>. I have more than a year of experience in web development. Also, I have done some content marketing internships. I am proficient in <b>English</b>, <b>Hindi</b>, <b>Bengali</b>. All my technical skills are mentioned below 👇</p>
                     <h4 class="skills__subtitle my-2">Web Technologies</h4>
                     <div class="skills__data">
                         <div class="skills__names">
